--- a/MiniAccountManagementSystem/Pages/Shared/_Layout.cshtml
+++ b/MiniAccountManagementSystem/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/ChartOfAccounts/Index">ChartOfAccount</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Voucher/Create">Add Voucher</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""  asp-page="/Voucher/Index">Voucher List</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
