Admin Can Assingn Role and by default role  assign when registration.

--- a/MiniAccountManagementSystem/Views/UserRole/Index.cshtml
+++ b/MiniAccountManagementSystem/Views/UserRole/Index.cshtml
@@ -19,7 +19,7 @@
             <tr>
                 <td>@user.Email</td>
                 <td>
-                    <a asp-action="ManageRole" asp-controller="UserRole" asp-route-userId="@user.Id" class="btn btn-primary"> Manage Role </a>
+                    <a asp-action="ManageRole" asp-controller="UserRole" asp-route-userid="@user.Id" class="btn btn-primary"> Manage Role </a>
                 </td>
             </tr>
         }
