Add Custom Role Crud and Assign Page

--- a/MiniAccountManagementSystem/Pages/Voucher/Index.cshtml
+++ b/MiniAccountManagementSystem/Pages/Voucher/Index.cshtml
@@ -51,7 +51,7 @@
                 <td>@v.ReferenceNo</td>
                 <td>@v.VoucherType</td>
                 <td>
-                    <a asp-page="/Voucher/View" asp-route-id="@v.VoucherID" class="btn btn-sm btn-secondary">View</a>
+                    <a asp-page="/Voucher/View" asp-route-id="@v.VoucherID" class="btn btn-sm btn-secondary">Details</a>
                 </td>
             </tr>
         }
