--- a/MiniAccountManagementSystem/Pages/Shared/_Layout.cshtml
+++ b/MiniAccountManagementSystem/Pages/Shared/_Layout.cshtml
@@ -31,9 +31,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""  asp-page="/Voucher/Index">Voucher List</a>
                         </li>
+                      
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UserRole" asp-action="Index">User List</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Assign Page</a>
+                        </li>
+                        
 
                     </ul>
                     <partial name="_LoginPartial" />
