--- a/MiniAccountManagementSystem/Views/PageAccess/Manage.cshtml
+++ b/MiniAccountManagementSystem/Views/PageAccess/Manage.cshtml
@@ -11,7 +11,7 @@
     <input type="hidden" name="roleName" value="@roleName" />
     @foreach (var vpage in allPages)
     {
-        <div class="form-check">
+        <div class="form-check d-inline-block">
             <input type="checkbox" name="selectedPages" value="@vpage" class="form-check-input" @(assignedPages.Contains(vpage) ? "checked" : "") />
             <label class="form-check-label">@vpage</label>
         </div>
