--- a/MiniAccountManagementSystem/Pages/Voucher/Index.cshtml
+++ b/MiniAccountManagementSystem/Pages/Voucher/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="col">
             <label>Voucher Type</label>
-            <select asp-for="VoucherType" class="form-control">
+            <select asp-for="VoucherType" class="form-select">
                 <option value="">All</option>
                 <option>Journal</option>
                 <option>Payment</option>
