--- a/MiniAccountManagementSystem/Views/Role/Index.cshtml
+++ b/MiniAccountManagementSystem/Views/Role/Index.cshtml
@@ -8,8 +8,15 @@
 
 <h2>Assign Roles With Page Access</h2>
 <form asp-action="Create" method="post">
-    <input type="text" name="roleName" required placeholder="New Role Name" />
-    <button type="submit" class="btn btn-success">Add Role</button>
+    <div class="row">
+        <div class="d-flex col-4">
+            <input type="text" name="roleName" class="form-control" required placeholder="New Role Name" />
+            <button type="submit" class="btn btn-success col-4"> + Add Role</button>
+        </div>
+       
+    </div>
+   
+    
 </form>
 <table class="table">
     <thead><tr><th>Role</th><th>Action</th> <th>Page Access</th> </tr></thead>
